<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_popular">Popular Movies</string>
    <string name="title_top_rated">Top Rated Movies</string>
    <string name="retry">Retry</string>
    <string name="error_no_connection">No connection</string>
    <string name="error_next_page">Can\'t load next page</string>
    <string name="error_cant_get_data_check_connection">Can\'t get data from server, check your connection!</string>
    <string name="poster_image">Poster Image</string>
    <string name="movie_position">#%1$d</string>
    <string name="image_tools">Image Tools</string>
    <string name="title_activity_detail_movie">DetailMovieActivity</string>
    <string name="empty_string">-</string>
    <string name="detail">Detail</string>
    <string name="release_date">Release Date: %1$s</string>
    <string name="genre">Genre:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="company">Company:</string>
    <string name="country">Country:</string>
    <string name="language">Language:</string>
    <string name="status">Status:</string>
    <string name="tagline">Tagline</string>
    <string name="synopsis">Synopsis</string>
    <string name="rating_number">%1$.1f</string>
    <string name="background_image">Background Image</string>
    <string name="send_to">Send to</string>
    <string name="menu_share">Share</string>
    <string name="menu_close">Close</string>
    <string name="share_content">I recommend this movie. %1$s %2$s #Udacity #PopularMovies @ngengs</string>
    <string name="video_image">Video Image</string>
    <string name="videos_title">Videos</string>
    <string name="video_indicator">Video Indicator</string>
    <string name="review">Review</string>
    <string name="review_text">"%1$s"</string>
    <string name="title_favorite">Favorite Movies</string>
    <string name="data_empty">Empty Movies</string>
</resources>
