<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rootData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#87000000"
                        android:padding="8dp"
                        android:text="@string/tagline"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textMovieTagline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/empty_string"
                        android:textSize="18sp"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#87000000"
                        android:padding="8dp"
                        android:text="@string/synopsis"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textMovieSynopsis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/empty_string"
                        android:textSize="18sp"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#87000000"
                        android:padding="8dp"
                        android:text="@string/detail"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/original_title"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/textMovieOriginalTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/empty_string"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/release_date"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/textMovieReleaseDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/empty_string"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/genre"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/textMovieGenre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/empty_string"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/budget"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/textMovieBudget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/empty_string"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/revenue"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/textMovieRevenue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/empty_string"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/company"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/textMovieCompany"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/empty_string"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/country"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/textMovieCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/empty_string"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/language"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/textMovieLanguague"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/empty_string"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/status"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/textMovieStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/empty_string"
                        android:textSize="18sp"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rootProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="32dp">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>